# CreatorOS

./: .gitignore  AGENTS.md  Project Overview.md  README.md  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.base.json
.github/workflows/: ci.yml  dependency-audit.yml
alembic/: env.py
alembic/versions/: 20260418_1905_initial_core_tables.py  20260418_2330_content_workflow_tables.py  20260419_0015_approval_records.py  20260419_0130_generation_jobs_and_assets.py  20260419_0600_job_logs.py  20260419_0700_publish_jobs.py  20260419_0800_analytics_snapshots_and_insights.py  20260420_0900_project_events.py  20260420_1100_project_level_generation_jobs.py  20260424_1400_idea_research_and_topics.py  20260426_0900_background_job_available_at.py
apps/api/: .env.example  AGENTS.md  main.py
apps/web/: AGENTS.md  eslint.config.mjs  next.config.ts  (+2 more)
docs/: README.md  backend-api.md  browser-automation-spec.md  build-plan.md  database-schema.md  env-setup.md  full-project-task-list.md  media-pipeline.md  project-overview.md  queue-jobs.md  release-checklist.md  repo-structure.md  shared-contracts.md
scripts/: bootstrap.sh  check.sh  dependency_audit.sh  secret_scan.py  seed_demo.py
storage/: .gitignore
tests/: test_analytics_worker.py  test_api.py  test_api_health.py  test_browser_providers.py  test_browser_worker.py  test_config.py  test_end_to_end_workflow.py  test_ffmpeg_commands.py  test_job_event_stream.py  test_media_worker.py  test_publisher_worker.py  test_timeline_validation.py  test_worker_service.py
workers/: service_loop.py
(+142 files in other folders)
